Prevent logo from being cut off

--- a/scss/modules/_site-header.scss
+++ b/scss/modules/_site-header.scss
@@ -144,7 +144,7 @@
   }
 
   @include media($lg) {
-    width: 32%;
+    width: 50%;
   }
 }
 
